# internal/guest/model/request_model.go
@@ -1,0 +1,7 @@
+package model
+
+// GuestRegisterRequest is the body for POST /guests/register
+type GuestRegisterRequest struct {
+	UserAgent string `json:"user_agent" binding:"required"`
+	IpAddress string `json:"ip_address" binding:"required"`
+}
